syntax = "proto3";
package esw;

option java_package = "cz.esw.serialization.proto";
option java_multiple_files = true;


//    private MeasurementInfo info;
//    private Map<DataType, List<Double>> records;



message  PRecord{
  PDataType datatype = 1;
  double measured_value = 2;
}


message PDataset{
  PMeasurementInfo info = 1;
  repeated PRecord records = 2;
}

message PDatasets {
  repeated PDataset dataset = 1;
}

enum PDataType {
  UNSPECIFIED = 0;
  DOWNLOAD = 1;
  UPLOAD = 2;
  PING = 3;
}

// int id, long timestamp, String measurerName
message PMeasurementInfo{
  int32 id = 1;
  int64 timestamp = 2;
  string measurerName = 3;
}
//	private MeasurementInfo info;
//	private Map<DataType, Double> averages;

message PAverage{
  PDataType datatype = 1;
  double average = 2;
}

message  PResult{
  PMeasurementInfo info = 1;
  repeated  PAverage averages = 2;
}

message PResults {
  repeated PResult result = 1;
}